[package]
name = "day1"
version = "0.1.0"
authors = ["Mans Larsson <mns.larsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_utils = { path = "/home/mans/Dropbox/Projects/advent_of_code/advent_of_code_2020/rust/aoc_utils" }
